# ThisCrow-frontend

./: .env.development  .env.production  .gitignore  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  updater.html  vite.config.ts
.github/workflows/: github-pages.yml  tauri-build.yml
public/: CNAME
src/: App.vue  constants.ts  init.ts  main.ts  router.ts  state.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  Dockerfile  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  log_filter.rs  main.rs  tray.rs
src-tauri/src/activity/: mod.rs
src-tauri/src/activity/game/: linux.rs  mod.rs  windows.rs
src-tauri/src/activity/music/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/browser/: browsers.rs  mod.rs  party.rs
src-tauri/src/party/: browsers.rs  mod.rs  watch.rs
src-tauri/src/party/scripts/: jump_to.js  locate.js  watching.js
src/api/: auth.ts  ban.ts  event.ts  info.ts  invite.ts  message.ts  permissions.ts  state.ts
src/components/: AddFriendButton.vue  AsideButton.vue  ContextMenu.vue  CrowIcon.vue  EmojiPicker.vue  ErrorToasts.vue  FriendsButton.vue  Header.vue  Message.vue  MessageBlock.vue  MessageInput.vue  MessageList.vue  Modals.vue  ProfileCard.vue  ReactionPicker.vue  Search.vue  Server.vue  ServerIcon.vue  StarryNightBackground.vue  Toast.vue  User.vue  UserCard.vue  VoicePanel.vue  WatchPartyCard.vue  WindowControls.vue
src/components/Friends/: AddFriendButton.vue  User.vue
src/components/Group/: ServerAdd.vue  ServerIcon.vue  ServerList.vue
src/components/Message/: DirectVoiceHeader.vue  Message.vue  MessageInput.vue  MessageList.vue
src/components/Server/: Channel.vue  Member.vue  ServerAdd.vue  ServerIcon.vue  ServerList.vue
src/components/Skeletons/: ChatSkeleton.vue  UserSkeleton.vue
src/components/Voice/: GlobalVoiceOverlay.vue  (+1 more)
src/composables/: useFiles.ts  useMessages.ts  useReleases.ts  useScroll.ts  useWebSocket.ts
src/layouts/: Auth.vue  Landing.vue  Main.vue
src/mocks/: handler.ts
src/modals/: AddFriend.vue  Calling.vue  ChannelSettings.vue  Confirm.vue  CreateCategory.vue  CreateChannel.vue  CreateServer.vue  EditMessage.vue  Invite.vue  JoinInvite.vue  NewDm.vue  ProfileCard.vue  ServerInfo.vue  ServerSettings.vue  WatchParty.vue
src/services/: db.ts  message.ts  webrtc.ts  websocket.ts
src/stores/: activity.ts  app.ts  contextMenu.ts  dm.ts  error.ts  friend.ts  friends.ts  game.ts  key.ts  me.ts  message.ts  modal.ts  permisson.ts  profileCard.ts  server.ts  servers.ts  user.ts  users.ts  voice.ts  watch.ts  watchPartyCard.ts
src/types/: array.d.ts  vite-plugin-purge-icons.d.ts  vue-virtual-scroller.d.ts
src/utils/: avatar.ts  emoji.ts  json.ts  messagePreview.ts  msgpack.ts  permissions.ts  perms.ts  snowflake.ts  token.ts  uid.ts
src/views/: Chat.vue  Chats.vue  Friends.vue  Group.vue  GroupChat.vue  Landing.vue  Login.vue  Register.vue  ServersList.vue
wasm-lib/: Cargo.toml
wasm-lib/src/: error.rs  lib.rs
(+28 files in other folders)
