[package]
name = "thiscrow-app"
version = "0.1.0"
authors = ["Azizhan Kaya"]
license = ""
repository = ""
edition = "2024"

[lib]
name = "thiscrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = ["macos-private-api"] }
tauri-plugin-updater = "2.9"
tauri-plugin-process = "2.2"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
flume = "0.12"
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
which = "8.0"
anyhow = "1.0"
win-gsmtc = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.2"
zbus = "4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Media_Control", "Foundation", "Storage_Streams"] }

