[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.8"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0"